--- a/Project/styles.css
+++ b/Project/styles.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
+    height: 100vh;
     font-family: "Montserrat", sans-serif;
     background: #FAF0CA;
+    position: relative;
 }
 
 /* General Button Style */
@@ -53,7 +55,7 @@ nav a {
 /* Side Bar */
 aside {
     width: 90px;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     background: #F4d35E;
     display: flex;
@@ -75,6 +77,12 @@ aside {
     padding: 10px;
     border-radius: 10px;
 }
+
+/*
+Last Updated: [2025-03-10]
+Author: Emyl Abad
+Last Updated By: Emyl Abad
+*/
 
 /* Main */
 main {
@@ -170,3 +178,97 @@ h2 {
     height: 40px;
 }
 
+.categories-btn li a {
+    text-decoration: none;
+    color: #F4d35E;
+}
+
+
+/* All Products Section */
+
+.product-card {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.product-img {
+    width: 202px;
+    height: 202px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.product-card-body {
+    background: #0D3B66;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 202px;
+    height: 105px;
+    color: #F4d35E;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.product-card li a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+}
+
+.product-card li a:hover, .categories-btn li:hover {
+    box-shadow: 0 0px 10px 0 rgba(68, 67, 67, 0.2);
+}
+
+.product-card-body h5, .product-card-body h6 {
+    margin: 0;
+}
+
+.product-card-body h5 {
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+.product-card-body h6 {
+    background: #F4d35E;
+    color: #0D3B66;
+    border-radius: 5px;
+    padding: 2px;
+}
+.ratings-icon {
+    width: 102px;
+    height: 30px;
+}
+
+.product-card-text {
+    padding-left: 5px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+/* Pagination */
+.pagination {
+    display: flex;
+    gap: 5px;
+    justify-content: end;
+    padding-right: 20px;
+}
+
+.pagination li {
+    width: 35px;
+    height: 35px;
+    list-style: none;
+    background: #0D3B66;
+    color: #F4d35E;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    font-weight: 600;
+}
