--- a/Project/dashboard.css
+++ b/Project/dashboard.css
@@ -11,6 +11,7 @@ body {
     width: 75px;
     height: 35px;
     border-radius: 10px;
+    font-weight: bold;
 }
 
 .btn-outline {
@@ -50,6 +51,22 @@ nav a {
     border: none;
     background: #0D3B66;
     color: #F4d35E;
+}
+
+#loginButton:hover {
+    cursor: pointer;    
+    background: #175a99;
+    color: #F4d35E;
+    transform: scale(1.02);
+    box-shadow: 0 0px 4px 0 rgba(68, 67, 67, 0.2);
+}
+
+#signupButton:hover {
+    border: 1px solid #175a99;
+    color: #175a99;
+    font-weight: bold;
+    transform: scale(1.02);
+    box-shadow: 0 0px 4px 0 rgba(68, 67, 67, 0.2);
 }
 
 /* Side Bar */
@@ -183,6 +200,18 @@ h2 {
     color: #F4d35E;
 }
 
+.a2c-btn:hover,
+.categories-btn li:hover,
+.categories-btn li.active-category {
+    background: #175a99;
+    border-radius: 10px;
+    transform: scale(1.02); 
+}
+
+.categories-btn li:hover a
+.categories-btn li.active-category a  {
+    color: #FAF0CA;
+}
 
 /* All Products Section */
 
@@ -239,7 +268,20 @@ h2 {
     color: #0D3B66;
     border-radius: 5px;
     padding: 2px;
+    font-size: 11px;
 }
+
+/* .product-card-body:hover {
+    
+} */
+
+.product-card a:hover {
+    transform: scale(1.02);
+    .product-card-body {
+        background: #175a99;
+    }
+}
+
 .ratings-icon {
     width: 102px;
     height: 30px;
@@ -252,23 +294,130 @@ h2 {
     align-items: center;
 }
 
-/* Pagination */
-.pagination {
+
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
-    gap: 5px;
-    justify-content: end;
-    padding-right: 20px;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0; 
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
-.pagination li {
-    width: 35px;
-    height: 35px;
-    list-style: none;
-    background: #0D3B66;
-    color: #F4d35E;
+.modal.show {
     display: flex;
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    width: 400px;
+    max-width: 90%;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.modal-content {
+    background: rgb(252, 252, 252);
+    width: 400px;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+/* Modal Header */
+.modal-header {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.modal-logo {
+    width: 40px;
+    height: 40px;
+}
+
+.modal-header h2 {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.modal-header a {
+    font-size: 14px;
+    color: #F4d35E;
+    text-decoration: none;
+}
+
+.modal-header span {
+    font-weight: bold;
+}
+
+#switchToSignup:hover, #switchToLogin:hover {
+    text-decoration: underline;
+}
+
+input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    font-weight: 600;
+    font-family: inherit;
+}
+
+label {
+    display: flex;
+    justify-content: start;
+    margin-left: 10px;
+}
+
+.btn-modal {
+    background: #F4d35E;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: 700;
+    margin: 15px 0px;
+}
+
+.btn-modal:hover {
+    background: #0D3B66;
+}
+
+.first-and-last-name {
+    margin-top: 10px;
+}
+
+/* Close Button */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
 }
