--- a/Project/styles.css
+++ b/Project/styles.css
@@ -78,7 +78,7 @@ nav a {
 aside {
     width: 90px;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background: #F4d35E;
     display: flex;
     flex-direction: column;
